@@ -1,5 +1,6 @@
 ---------------------------------------------------------------------------
 Version 3.0.0 (rgerhards), 2007-12-??
+- added ability to specify listen IP address for UDP syslog server
 - license changed to GPLv3
 - first implementation of loadable input module system
 - mark messages are now provided by loadble module immark
